<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.muks.snake</groupId>
    <artifactId>snake-game</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>snake-game</name>
    <url>http://maven.apache.org</url>

    <repositories>
        <repository>
            <id>java-net</id>
            <url>http://download.java.net/maven/2</url>
        </repository>
    </repositories>

    <properties>
        <slf4j.version>1.7.7</slf4j.version>
        <logback.version>1.0.7</logback.version>
        <testNg-version>6.10</testNg-version>
        <java.version>1.8</java.version>
        <surefire.version>2.21.0</surefire.version>
        <jacoco.version>0.7.2.201409121644</jacoco.version>
    </properties>


    <dependencies>
        <!-- TestNG and reportNg for testing purpose -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testNg-version}</version>
        </dependency>


        <!-- For logging purpose -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>


    </dependencies>


    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/test-suite.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                </configuration>
            </plugin>



            <!--<plugin>-->
                <!--<groupId>org.jacoco</groupId>-->
                <!--<artifactId>jacoco-maven-plugin</artifactId>-->
                <!--<version>${jacoco.version}</version>-->

                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>default-prepare-agent</id>-->
                        <!--<goals>-->
                            <!--<goal>prepare-agent</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                    <!--<execution>-->
                        <!--<id>default-report</id>-->
                        <!--<phase>prepare-package</phase>-->
                        <!--<goals>-->
                            <!--<goal>report</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->

                    <!--<execution>-->
                        <!--<id>jacoco-check</id>-->
                        <!--<phase>test</phase>-->
                        <!--<goals>-->
                            <!--<goal>check</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<rules>-->
                                <!--<rule implementation="org.jacoco.maven.RuleConfiguration">-->
                                    <!--<element>BUNDLE</element>-->
                                    <!--<limits>-->
                                        <!--<limit implementation="org.jacoco.report.check.Limit">-->
                                            <!--<counter>INSTRUCTION</counter>-->
                                            <!--<value>COVEREDRATIO</value>-->
                                            <!--<minimum>0.1</minimum>-->
                                        <!--</limit>-->
                                    <!--</limits>-->
                                <!--</rule>-->
                            <!--</rules>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <!-- Run shade goal on package phase -->
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
